assets/style.css
/* #region common */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif
}

/* cont is short for container */
/* sect is short for section */
:root {
    --header-cont-background: #add8e6;
    --header-background: #daa520;
    --main-firstsect-cont-background: #00008b;
    --main-firstsect-background: #ee82ee;
    --main-cont-background: #d3d3d3;
    --main-middlesect-background-blue: #1e90ff;
    --main-middlesect-background-pink: #ffc0cb;
    --main-finalsect-background: #228b22;
    --footer-cont-background: #23272a;
    --footer-sect1-background-salmon: #f08080;
    --footer-sect1-background-teal: #20b2aa;
    --footer-sect2-background: #7fffd4;
    --footer-sect2-object: #feb5c0;

    --header-colour: #3161e0;
    --background-colour: #f6f6f6;
    --button1-plus-footer: #23272a;
    --button2: #8ea1e1;
    --font-colour1: #1f2327;
    --font-colour2: #7289da;
}

a:link {
    text-decoration: none;
}

button {
    padding: 0.5rem 0.75rem;
    border: none;
    border-radius: 1rem;
}

.logo {
    padding-left: 0.5rem;
}

/* #endregion common */

/* #region header */
header {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--header-colour);


    div {
        margin: 2rem 0rem;
        padding: 0.2rem 10rem;
    }
}

a {
    margin: 0rem 0.5rem;
    color: white;
}

.login {
    padding-right: 0.5rem;
}

#login {
    background-color: white;
}

/* #endregion header */

/* #region main */
.flex-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
}

/* #region first section */
.sect1 {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 700px;
    background-image: url(../assets/img/jumbo.png);
    background-size: contain;

    .buttons {
        margin: auto;
        text-align: center;

        button {
            font-size: large;
            border-radius: 2rem;
            padding: 1rem 2rem;
            margin: 0rem 1rem;
        }
    }

    div {
        width: 60%;
        height: 70%;
        line-height: 2.5rem;

        h1 {
            text-align: center;
            color: white;
            padding: 5rem;
            font-size: 4rem;
        }

        p {
            text-align: center;
            color: white;
            padding: 0rem 4rem 2rem;
            font-size: x-large;
        }
    }
}

#mac {
    background-color: white;
    color: var(--font-colour1);
}

#browser {
    background-color: var(--button1-plus-footer);
    color: white;
}

/* #endregion first section */

/* #region middle sections */

.sect2 {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 500px;
    margin: 5rem 0rem;

    div {
        width: 50%;
        height: 100%;
    }

    .background1 {
        background-image: url(../assets/img/item1.svg);
        background-size: contain;
        background-repeat: no-repeat;
    }

    :last-child {
        width: 30%;

        h1 {
            text-align: left;
            color: var(--font-colour1);
            padding: 2.5rem 2.5rem 0rem;
            font-size: 3rem;
        }

        p {
            width: auto;
            text-align: left;
            color: var(--font-colour1);
            padding: 2.5rem;
            font-size: x-large;
        }
    }
}

.sect3 {
    background-color: var(--background-colour);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 500px;
    margin: 5rem 0rem;

    div {
        width: 50%;
        height: 100%;
    }

    .background2 {
        width: 50%;
        background-image: url(../assets/img/item2.svg);
        background-size: contain;
        background-repeat: no-repeat;
    }

    :first-child {
        width: 30%;

        h1 {
            text-align: left;
            color: var(--font-colour1);
            padding: 2.5rem 2.5rem 0rem;
            font-size: 3rem;
        }

        p {
            width: auto;
            text-align: left;
            color: var(--font-colour1);
            padding: 2.5rem;
            font-size: x-large;
        }
    }
}


.sect4 {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 500px;
    margin: 5rem 0rem;

    div {
        width: 50%;
        height: 100%;
    }

    .background3 {
        background-image: url(../assets/img/item3.svg);
        background-size: contain;
        background-repeat: no-repeat;
    }

    :last-child {
        width: 30%;

        h1 {
            text-align: left;
            color: var(--font-colour1);
            padding: 2.5rem 2.5rem 0rem;
            font-size: 3rem;
        }

        p {
            width: auto;
            text-align: left;
            color: var(--font-colour1);
            padding: 2.5rem;
            font-size: x-large;
        }
    }
}

/* #endregion middle sections */

/* #region final section */
.sect5 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-color: var(--background-colour);
    background-size: contain;
    padding: 5rem;

    div {
        text-align: center;

        button {
            font-size: large;
            border-radius: 2rem;
            padding: 1rem 2rem;
            margin: 0rem 1rem;
            background-color: var(--button2);
        }

        h1 {
            text-align: center;
            color: var(--font-colour1);
            padding: 2.5rem 2.5rem 0rem;
            font-size: 3rem;
        }

        p {
            width: auto;
            text-align: center;
            background-image: url(../assets/img/stars.svg);
            background-size: contain;
            background-repeat: no-repeat;
            color: var(--font-colour1);
            padding: 2.5rem;
            font-size: x-large;
        }
    }
}

/* #endregion final section */

/* #endregion main */

/* #region footer */

/* #region footer section 1 */
.foot1 {
    background-color: var(--button1-plus-footer);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 700px;

    div {
        width: 13%;
        height: 70%;
        line-height: 2.5rem;
    }

    :first-child {
        width: 27.5%;
        
        img {
            width: 2rem;
        }
    }

    h1 {
        color: var(--font-colour2);
    }

    h4 {
        color: var(--font-colour2);
    }

    p {
        color: white;
    }
}

/* #endregion footer section 1 */

hr {
    border: 1px solid var(--font-colour2);
}

/* #region footer section 2 */
.foot2 {
    background-color: var(--button1-plus-footer);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 1rem 0rem 3rem;

    div {
        display: flex;
        justify-content: space-between;
        width: 80%;
        padding: 0.5rem 0rem;

        button {
            background-color: var(--button2);
            color: white;
        }
    }
}

/* #endregion footer section 2 */

/* #endregion footer */

